tests/baselines/reference/symbolProperty44.errors.txt
symbolProperty44.ts(2,9): error TS2733: Property '[Symbol.hasInstance]' was also declared here.
symbolProperty44.ts(5,9): error TS2718: Duplicate property '[Symbol.hasInstance]'.


==== symbolProperty44.ts (2 errors) ====
    class C {
        get [Symbol.hasInstance]() {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2733: Property '[Symbol.hasInstance]' was also declared here.
            return "";
        }
        get [Symbol.hasInstance]() {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate property '[Symbol.hasInstance]'.
            return "";
        }
    }